--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -46,7 +46,8 @@ plugins:
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-# exclude:
+exclude:
+  - search*
 #   - .sass-cache/
 #   - .jekyll-cache/
 #   - gemfiles/
